# BasicsOfProgramming

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/array/: array.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vectorVoid/: vectorVoid.h
libs/file_io/: CMakeLists.txt  file.c  file.h  file_test.c  file_test.h
libs/streams/: CMakeLists.txt  streams.c  streams.h  testStreams.c  testStreams.h
libs/string/: CMakeLists.txt  string_test.c  string_test.h
libs/string/tasks/: string.h
